trying to fix animation issue, but still unfixed yet :(

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -17,4 +17,6 @@
     </style>
 
     <style name="Theme.SplashScreen" parent="Theme.GithubUser"/>
+
+    <style name="Theme.MainActivity" parent="Theme.MaterialComponents.Light.DarkActionBar"/>
 </resources>
