--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -19,4 +19,9 @@
     <style name="Theme.SplashScreen" parent="Theme.GithubUser"/>
 
     <style name="Theme.MainActivity" parent="Theme.MaterialComponents.Light.DarkActionBar"/>
+
+    <style name="Theme.DetailActivity" parent="Theme.GithubUser">
+        <!-- Customize color of navigation drawer icon and back arrow -->
+        <item name="colorControlNormal">@color/white</item>
+    </style>
 </resources>
