--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/open_sans</item>
         <item>@font/open_sans_bold</item>
+        <item>@font/open_sans_light</item>
         <item>@font/poppins_semibold</item>
     </array>
 </resources>
