--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,4 +22,9 @@
     </style>
 
     <style name="Theme.MainActivity" parent="Theme.MaterialComponents.Light.DarkActionBar"/>
+
+    <style name="Theme.DetailActivity" parent="Theme.GithubUser">
+        <!-- Customize color of navigation drawer icon and back arrow -->
+        <item name="colorControlNormal">@color/font_black</item>
+    </style>
 </resources>
