--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -70,6 +70,7 @@
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_margin="16dp"
+                android:contentDescription="@string/avatar"
                 app:civ_border_color="@color/font_gray"
                 app:civ_border_width="4dp"
                 app:layout_constraintDimensionRatio="1:1"
