MainActivity.kt feature completed

--- a/app/src/main/res/layout/item_shimmer.xml
+++ b/app/src/main/res/layout/item_shimmer.xml
@@ -16,56 +16,40 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <View
             android:id="@+id/circleImageView"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_margin="8dp"
-            android:contentDescription="@string/avatar"
-            app:civ_border_color="#ACACAC"
-            app:civ_border_width="4dp"
+            android:background="@drawable/circle_shimmer"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/user1" />
 
-        <com.facebook.shimmer.ShimmerFrameLayout
-            android:id="@+id/shimmer"
-            android:layout_width="66dp"
-            android:layout_height="66dp"
-            app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
-            app:layout_constraintEnd_toEndOf="@+id/circleImageView"
-            app:layout_constraintStart_toStartOf="@+id/circleImageView"
-            app:layout_constraintTop_toTopOf="@+id/circleImageView">
 
-            <include
-                layout="@layout/shimmer_glide"/>
-
-        </com.facebook.shimmer.ShimmerFrameLayout>
-
-        <TextView
+        <View
             android:id="@+id/tv_username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="16dp"
             android:layout_marginStart="12dp"
-            android:fontFamily="@font/open_sans_semibold"
-            android:textColor="@color/font_black"
-            android:textSize="20sp"
+            android:layout_marginEnd="8dp"
             app:layout_constraintBottom_toTopOf="@+id/tv_id"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="#aa444444"
             app:layout_constraintStart_toEndOf="@+id/circleImageView"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
             tools:text="Irfan Ripat" />
 
-        <TextView
+        <View
             android:id="@+id/tv_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="140dp"
+            android:layout_height="16dp"
             android:layout_marginStart="12dp"
-            android:fontFamily="@font/open_sans"
-            android:textColor="@color/font_gray"
-            android:textSize="12sp"
+            android:layout_marginTop="8dp"
+            android:background="#aa444444"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/circleImageView"
             app:layout_constraintTop_toBottomOf="@+id/tv_username"
