--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/setting"
+        android:id="@+id/language_setting"
         android:icon="@drawable/ic_language"
         app:showAsAction="always"
         android:title="Language" />
