rename layout file

--- a/app/src/main/res/layout/fragment_followers.xml
+++ b/app/src/main/res/layout/fragment_followers.xml
@@ -20,7 +20,7 @@
         tools:listitem="@layout/item_github_user">
 
         <include
-            layout="@layout/shimmer_layout"/>
+            layout="@layout/layout_main_shimmer"/>
 
     </com.facebook.shimmer.ShimmerFrameLayout>
 
