--- a/app/src/main/res/layout/layout_error.xml
+++ b/app/src/main/res/layout/layout_error.xml
@@ -8,15 +8,24 @@
     <ImageView
         android:id="@+id/no_data"
         android:layout_gravity="center"
-        android:layout_width="60dp"
+        android:layout_width="90dp"
         android:layout_height="90dp"
-        android:src="@drawable/not_found"/>
+        android:src="@drawable/no_data"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:fontFamily="@font/poppins_semibold"
-        android:text="No Result"/>
+        android:text="Failed to getting data"/>
+
+    <Button
+        android:id="@+id/btn_refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_gravity="center"
+        android:textAllCaps="false"
+        android:text="Refresh"/>
 
 </LinearLayout>
