--- a/app/src/main/res/layout/layout_error.xml
+++ b/app/src/main/res/layout/layout_error.xml
@@ -13,6 +13,7 @@
         android:src="@drawable/no_data"/>
 
     <TextView
+        android:id="@+id/text_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
