working on localization

--- a/app/src/main/res/layout/layout_error.xml
+++ b/app/src/main/res/layout/layout_error.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/no_data"
+        android:contentDescription="@string/error_get_data"
         android:layout_gravity="center"
         android:layout_width="90dp"
         android:layout_height="90dp"
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:fontFamily="@font/poppins_semibold"
-        android:text="Failed to getting data"/>
+        android:text="@string/failed_to_getting_data"/>
 
     <Button
         android:id="@+id/btn_refresh"
@@ -27,6 +27,6 @@
         android:layout_marginTop="4dp"
         android:layout_gravity="center"
         android:textAllCaps="false"
-        android:text="Refresh"/>
+        android:text="@string/refresh"/>
 
 </LinearLayout>
