--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,13 @@
     android:background="#EDEEF1"
     tools:context=".activity.main.MainActivity">
 
-    <com.irfan.githubuser.util.CollapsedHintTextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/search_view"
         style="@style/TextInputLayoutTheme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:hint="Search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -27,11 +25,13 @@
                 android:layout_width="match_parent"
                 android:paddingStart="15dp"
                 android:paddingEnd="15dp"
+                android:drawableEnd="@drawable/ic_search"
+                android:maxLines="1"
                 android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
-                android:inputType="text" />
+                android:inputType="text"/>
 
-    </com.irfan.githubuser.util.CollapsedHintTextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
