--- a/app/src/main/res/layout/item_rv_shimmer.xml
+++ b/app/src/main/res/layout/item_rv_shimmer.xml
@@ -25,8 +25,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/user1" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
 
         <View
