Revert "submission2 completed"
This reverts commit a3c2f53d

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
         <!-- Customize your theme here. -->
+
         <!-- Default font color -->
         <item name="android:textColor">@color/font_black</item>
     </style>
@@ -20,13 +21,10 @@
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
     </style>
 
-    <style name="Theme.MainActivity" parent="Theme.MaterialComponents.Light.DarkActionBar">
-        <item name="android:colorBackground">#EDEEF1</item>
-    </style>
+    <style name="Theme.MainActivity" parent="Theme.MaterialComponents.Light.DarkActionBar"/>
 
     <style name="Theme.DetailActivity" parent="Theme.GithubUser">
         <!-- Customize color of navigation drawer icon and back arrow -->
-        <item name="android:colorBackground">#EDEEF1</item>
         <item name="colorControlNormal">#fff</item>
     </style>
 
