--- a/app/src/main/res/layout/item_rv_shimmer.xml
+++ b/app/src/main/res/layout/item_rv_shimmer.xml
@@ -36,7 +36,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintBottom_toTopOf="@+id/tv_id"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="#aa444444"
+            android:background="@color/shimmer_view_color"
             app:layout_constraintStart_toEndOf="@+id/circleImageView"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
@@ -48,7 +48,7 @@
             android:layout_height="16dp"
             android:layout_marginStart="12dp"
             android:layout_marginTop="8dp"
-            android:background="#aa444444"
+            android:background="@color/shimmer_view_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/circleImageView"
             app:layout_constraintTop_toBottomOf="@+id/tv_username"
