--- a/app/src/main/res/layout/item_github_user.xml
+++ b/app/src/main/res/layout/item_github_user.xml
@@ -22,7 +22,7 @@
             android:layout_height="70dp"
             android:layout_margin="8dp"
             android:contentDescription="@string/avatar"
-            app:civ_border_color="#ACACAC"
+            app:civ_border_color="@color/circular_image_border_color"
             app:civ_border_width="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
